--- a/it_services.html
+++ b/it_services.html
@@ -64,7 +64,7 @@
         <div class="row rounded border-box-anim" id="androidid">
           <div class="col">
                 <div class="row my-3">
-                    <div class="col h1 no-gutter text-center">
+                    <div class="col h1 no-gutter text-center theme-color">
                         Android App Development
                     </div> 
                 </div>
@@ -186,7 +186,7 @@
         <div class="row rounded border-box-anim my-5" id="hybridid">
           <div class="col">
                 <div class="row my-3">
-                    <div class="col h1 text-center">
+                    <div class="col h1 text-center theme-color">
                         Hybrid App Development
                     </div> 
                 </div>
@@ -296,7 +296,7 @@
         <div class="row rounded border-box-anim my-5" id="iosid">
           <div class="col">
                 <div class="row my-3">
-                    <div class="col h1 text-center" >
+                    <div class="col h1 text-center theme-color" >
                         IOS App Development
                     </div> 
                 </div>
@@ -419,7 +419,7 @@
         <div class="row rounded border-box-anim my-5" id="webid">
           <div class="col">
                 <div class="row my-3">
-                    <div class="col h1 text-center">
+                    <div class="col h1 text-center theme-color">
                         Web Development
                     </div> 
                 </div>
@@ -509,7 +509,7 @@
         <div class="row rounded border-box-anim my-5" id="magnetoid">
           <div class="col">
                 <div class="row my-3">
-                    <div class="col h1 text-center">
+                    <div class="col h1 text-center theme-color">
                         Magento
                     </div> 
                 </div>
@@ -561,7 +561,7 @@
         <div class="row rounded border-box-anim my-5" id="phpid">
             <div class="col">
                 <div class="row my-3">
-                    <div class="col h1 text-center">
+                    <div class="col h1 text-center theme-color">
                         PHP
                     </div> 
                 </div>
@@ -639,7 +639,7 @@
         <div class="row rounded border-box-anim my-5" id="wordpressid">
             <div class="col">
                 <div class="row my-3">
-                    <div class="col h1 text-center">
+                    <div class="col h1 text-center theme-color">
                         WordPress
                     </div> 
                 </div>
@@ -673,7 +673,7 @@
         <div class="row rounded border-box-anim my-5" id="netid">
             <div class="col">
                 <div class="row my-3">
-                    <div class="col h1 text-center">
+                    <div class="col h1 text-center theme-color">
                         .Net Development
                     </div> 
                 </div>
@@ -711,7 +711,7 @@
         <div class="row rounded border-box-anim my-5" id="internetid">
             <div class="col">
                 <div class="row my-3">
-                    <div class="col h1 text-center">
+                    <div class="col h1 text-center theme-color">
                         Internet Marketing
                     </div> 
                 </div>
@@ -755,7 +755,7 @@
         <div class="row rounded border-box-anim my-5" id="seoid">
             <div class="col">
                 <div class="row my-3">
-                    <div class="col h1 text-center">
+                    <div class="col h1 text-center theme-color">
                         SEO Services
                     </div> 
                 </div>
