--- a/BusinessServices.html
+++ b/BusinessServices.html
@@ -22,22 +22,22 @@
   
         <ul class="navbar-nav  nav-fill w-100 flex-row my-3">
           <li class="nav-item" style="border-right:1px solid;">
-            <a class="nav-link-btn-company-bottom-nav" href="#androidid">Idea Identification and Assesment</a>
+            <a class="nav-link-btn-company-bottom-nav" href="#idea">Idea Identification and Assesment</a>
           </li>
           <li class="nav-item active" style="border-right:1px solid;">
-            <a class="nav-link-btn-company-bottom-nav" href="#hybridid">Building a Legal Foundation</a>
+            <a class="nav-link-btn-company-bottom-nav" href="#building">Building a Legal Foundation</a>
           </li>
           <li class="nav-item active" style="border-right:1px solid;">
-            <a class="nav-link-btn-company-bottom-nav" href="#iosid">Understanding Financial Basis</a>
+            <a class="nav-link-btn-company-bottom-nav" href="#financial">Understanding Financial Basis</a>
           </li>
           <li class="nav-item active" style="border-right:1px solid;">
-              <a class="nav-link-btn-company-bottom-nav" href="webid">Business Planning and Modelling</a>
+              <a class="nav-link-btn-company-bottom-nav" href="business">Business Planning and Modelling</a>
             </li>
             <li class="nav-item active" style="border-right:1px solid;">
-              <a class="nav-link-btn-company-bottom-nav" href="#magnetoid">Fund Raising and Valuation</a>
+              <a class="nav-link-btn-company-bottom-nav" href="#fund">Fund Raising and Valuation</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link-btn-company-bottom-nav" href="#phpid">Pitching and Term Sheet</a>
+              <a class="nav-link-btn-company-bottom-nav" href="#pitching">Pitching and Term Sheet</a>
             </li>
         </ul>
   
@@ -63,7 +63,7 @@
 </div>
 
 <div class="bgimg-2">
-  <div class="h1 text-center theme-color my-0" style="padding-top: 7rem; padding-bottom: 7rem;">
+  <div class="h1 text-center theme-color my-0" style="padding-top: 7rem; padding-bottom: 7rem;" id="building">
   <span class="border-business">Building a Legal Foundation</span>
   </div>
 </div>
@@ -79,7 +79,7 @@
 </div>
 
 <div class="bgimg-3">
-  <div class="h1 text-center theme-color my-0" style="padding-top: 7rem; padding-bottom: 7rem;">
+  <div class="h1 text-center theme-color my-0" style="padding-top: 7rem; padding-bottom: 7rem;" id="financial">
   <span class="border-business">Understanding Financial Basics</span>
   </div>
 </div>
@@ -97,7 +97,7 @@
 </div>
 
 <div class="bgimg-4">
-  <div class="h1 text-center theme-color my-0" style="padding-top: 7rem; padding-bottom: 7rem;">
+  <div class="h1 text-center theme-color my-0" style="padding-top: 7rem; padding-bottom: 7rem;" id="business">
   <span class="border-business">Business Planning & Modelling</span>
   </div>
 </div>
@@ -115,7 +115,7 @@
 </div>
 
 <div class="bgimg-5">
-  <div class="h1 text-center theme-color my-0" style="padding-top: 7rem; padding-bottom: 7rem;">
+  <div class="h1 text-center theme-color my-0" style="padding-top: 7rem; padding-bottom: 7rem;" id="fund">
   <span class="border-business">Fund Raising & Valuation</span>
   </div>
 </div>
@@ -133,7 +133,7 @@
 </div>
 
 <div class="bgimg-6">
-  <div class="h1 text-center theme-color my-0" style="padding-top: 7rem; padding-bottom: 7rem;">
+  <div class="h1 text-center theme-color my-0" style="padding-top: 7rem; padding-bottom: 7rem;" id="pitching">
   <span class="border-business">Pitching & Term Sheet</span>
   </div>
 </div>
