--- a/index.html
+++ b/index.html
@@ -1,32 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
-	<meta charset="UTF-8">
-	<meta content="width=device-width, initial-scale=1" name="viewport">
-	<meta content="IE=edge" http-equiv="X-UA-Compatible">
-	<title>Services</title>
-    <link href="Services_intro_css/font-awesome.min.css" rel="stylesheet" type="text/css">
-	<link href="Services_intro_css/normalize.css" rel="stylesheet" type="text/css">
-    <link href="Services_intro_css/demo.css" rel="stylesheet" type="text/css">
-	<link href="Services_intro_css/xopixel.css" rel="stylesheet" type="text/css">
-</head>
-<body>  
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<section class="xop-container">
-    <div class="xop-left">
-        <article>
-            <h1>Business Services</h1>
-            <a class="xop-button" href="BusinessServices.html" target="_blank">Read More</a>
-        </article>
-    </div>    
-    <div class="xop-right">
-        <article>
-            <h1>IT Services</h1>
-            <a class="xop-button" href="it_services.html" target="_blank">Read More</a>
-        </article>
-    </div>
-</section>
-    
-</body>
+    <link href="Services_intro_css/demo.css" rel="stylesheet" type="text/css">
+
+    <title>Service</title>
+  </head>
+  <body>
+    <section class="xop-container">
+        <div class="xop-left">
+            <article>
+                <h1>Business Services</h1><a class="xop-button" href="BusinessServices.html" target="_blank">Read More</a>
+            </article>
+        </div>
+        <div class="xop-right">
+            <article>
+                <h1>IT Service</h1><a class="xop-button" href="it_services.html" target="_blank">Read More</a>
+            </article>
+        </div>
+    </section>
+  </body>
 </html>
