--- a/index.html
+++ b/index.html
@@ -4,12 +4,52 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
 
     <link href="Services_intro_css/demo.css" rel="stylesheet" type="text/css">
+
+    <!-- JS, Popper.js, and jQuery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
     <title>Service</title>
   </head>
   <body>
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light rounded">
+      <a class="navbar-brand" href="#" style="margin-left: 5%;">
+        <img src="Images/logo1.png" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
+      Power2Create
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample02" aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    
+      <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample02">
+        <ul class="navbar-nav" style="margin-left: 50%;">
+          <li class="nav-item">
+            <a class="nav-link" href="#" style="font-family: 'Ubuntu', sans-serif;">Company</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" style="font-family: 'Ubuntu', sans-serif;">Service</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" style="font-family: 'Ubuntu', sans-serif;">Blogs</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" style="font-family: 'Ubuntu', sans-serif;">Contact Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" style="font-family: 'Ubuntu', sans-serif;">Get A Free Quote</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+
+
     <section class="xop-container">
         <div class="xop-left">
             <article>
