--- a/BusinessServices.html
+++ b/BusinessServices.html
@@ -3,14 +3,53 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="style-business-services.css">
+<link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
 <title>Business Services</title>
+
+<!-- JS, Popper.js, and jQuery -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </head>
 
 <body>
 
   <div class="banner-business-service">
     <div class="back-bg-color-business">
+
+      <nav class="navbar navbar-expand-lg navbar-dark bg-none rounded">
+        <a class="navbar-brand" href="#" style="margin-left: 5%;">
+          <img src="Images/logo0.png" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
+        Power2Create
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample02" aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="" role="button" ><i class="fa fa-bars" aria-hidden="true" style="color:#e6e6ff"></i></span>
+      </button>
+      
+        <div class="collapse navbar-collapse justify-content-md-center rounded" id="navbarsExample02">
+          <ul class="navbar-nav" style="margin-left: 50%;">
+            <li class="nav-item">
+              <a class="nav-link" href="#" style="font-family: 'Ubuntu', sans-serif;">Company</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" style="font-family: 'Ubuntu', sans-serif;">Service</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" style="font-family: 'Ubuntu', sans-serif;">Blogs</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" style="font-family: 'Ubuntu', sans-serif;">Contact Us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" style="font-family: 'Ubuntu', sans-serif;">Get A Free Quote</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
+
 		<div class="sign">
 		<span class="banner-business-service-text">Business Services</span>
   </div>
