--- a/it_services.html
+++ b/it_services.html
@@ -3,9 +3,11 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="style_it_services.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
 <title>IT Services</title>
 <!-- CSS only -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+<link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
 
 </head>
 
@@ -13,6 +15,38 @@
 
 <div class="bgimg-1">
     <div class="back-bg-color">
+
+      <nav class="navbar navbar-expand-lg navbar-dark bg-none rounded">
+        <a class="navbar-brand" href="#" style="margin-left: 5%;">
+          <img src="Images/logo0.png" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
+        Power2Create
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample02" aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="" role="button" ><i class="fa fa-bars" aria-hidden="true" style="color:#e6e6ff"></i></span>
+      </button>
+      
+        <div class="collapse navbar-collapse justify-content-md-center rounded" id="navbarsExample02">
+          <ul class="navbar-nav" style="margin-left: 50%;">
+            <li class="nav-item">
+              <a class="nav-link" href="#" style="font-family: 'Ubuntu', sans-serif;">Company</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" style="font-family: 'Ubuntu', sans-serif;">Service</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" style="font-family: 'Ubuntu', sans-serif;">Blogs</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" style="font-family: 'Ubuntu', sans-serif;">Contact Us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" style="font-family: 'Ubuntu', sans-serif;">Get A Free Quote</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
+
         <div class="caption">
             <div class="it-service-text">IT Services</div>
         </div>
