--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
     <link href="Services_intro_css/demo.css" rel="stylesheet" type="text/css">
 
     <!-- JS, Popper.js, and jQuery -->
@@ -17,42 +17,38 @@
     <title>Service</title>
   </head>
   <body>
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-light rounded">
-      <a class="navbar-brand" href="#" style="margin-left: 5%;">
-        <img src="Images/logo1.png" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
-      Power2Create
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample02" aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    
-      <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample02">
-        <ul class="navbar-nav" style="margin-left: 50%;">
-          <li class="nav-item">
-            <a class="nav-link" href="#" style="font-family: 'Ubuntu', sans-serif;">Company</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#" style="font-family: 'Ubuntu', sans-serif;">Service</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#" style="font-family: 'Ubuntu', sans-serif;">Blogs</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#" style="font-family: 'Ubuntu', sans-serif;">Contact Us</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#" style="font-family: 'Ubuntu', sans-serif;">Get A Free Quote</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-
-
-
     <section class="xop-container">
         <div class="xop-left">
             <article>
+              <nav class="navbar navbar-expand-lg navbar-dark bg-none rounded">
+                <a class="navbar-brand" href="#" style="margin-left: 5%;">
+                  <img src="Images/logo0.png" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
+                Power2Create
+              </a>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample02" aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="" role="button" ><i class="fa fa-bars" aria-hidden="true" style="color:#e6e6ff"></i></span>
+              </button>
+              
+                <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample02">
+                  <ul class="navbar-nav hero">
+                    <li class="nav-item">
+                      <a class="nav-link" href="#" style="font-family: 'Ubuntu', sans-serif;">Company</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#" style="font-family: 'Ubuntu', sans-serif;">Service</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#" style="font-family: 'Ubuntu', sans-serif;">Blogs</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#" style="font-family: 'Ubuntu', sans-serif;">Contact Us</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#" style="font-family: 'Ubuntu', sans-serif;">Get A Free Quote</a>
+                    </li>
+                  </ul>
+                </div>
+              </nav>
                 <h1>Business Services</h1><a class="xop-button" href="BusinessServices.html" target="_blank">Read More</a>
             </article>
         </div>
