--- a/BusinessServices.html
+++ b/BusinessServices.html
@@ -6,6 +6,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
+<link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
 <title>Business Services</title>
 
 <!-- JS, Popper.js, and jQuery -->
@@ -29,20 +30,20 @@
       </button>
       
         <div class="collapse navbar-collapse justify-content-md-center rounded" id="navbarsExample02">
-          <ul class="navbar-nav" style="margin-left: 50%;">
+          <ul class="navbar-nav hero">
             <li class="nav-item">
               <a class="nav-link" href="#" style="font-family: 'Ubuntu', sans-serif;">Company</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#" style="font-family: 'Ubuntu', sans-serif;">Service</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item ">
               <a class="nav-link" href="#" style="font-family: 'Ubuntu', sans-serif;">Blogs</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item" >
               <a class="nav-link" href="#" style="font-family: 'Ubuntu', sans-serif;">Contact Us</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item" >
               <a class="nav-link" href="#" style="font-family: 'Ubuntu', sans-serif;">Get A Free Quote</a>
             </li>
           </ul>
@@ -189,5 +190,16 @@
   </div>
 </div>
 </div>
+
+<div id="footer" class="my-5">
+        
+</div>
+
+<!-- JS, Popper.js, and jQuery -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+
+<script type="text/javascript" src="./footer.js"></script>
 </body>
 </html>
